--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@picocss/pico": "^1.5.10",
-    "astro": "^2.4.1"
+    "astro": "^2.4.1",
+    "lottie-web": "^5.11.0"
   }
 }
