--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@picocss/pico": "^1.5.10",
     "astro": "^2.4.1",
     "astro-integration-lottie": "^0.2.3",
+    "kute.js": "^2.2.4",
     "lottie-web": "^5.11.0"
   }
 }
