--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^2.4.1",
     "astro-integration-lottie": "^0.2.3",
     "kute.js": "^2.2.4",
-    "lottie-web": "^5.11.0"
+    "lottie-web": "^5.11.0",
+    "rellax": "^1.12.1"
   }
 }
